--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
 }
 
 .header {
-    min-height: 100vh;
+    min-height: 105vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(eduford_img/banner.png);
+    background-image: linear-gradient(rgba(3, 37, 59, 0.781), rgba(0, 7, 6, 0.705)), url(eduford_img/d3.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -46,7 +46,7 @@ nav img {
     content: '';
     width: 0%;
     height: 2px;
-    background: #f44336;
+    background: #03b4a8;
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -68,12 +68,13 @@ nav img {
 
 .text-box h1 {
     font-size: 52px;
-
+    line-height: 60px;
 }
 
 .text-box p {
     margin: 10px 0 40px;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 400;
     color: white;
 }
 
@@ -81,6 +82,7 @@ nav img {
     display: inline-block;
     text-decoration: none;
     color: white;
+    font-weight: 400;
     border: 1px solid #fff;
     padding: 12px 34px;
     font-size: 13px;
@@ -90,8 +92,8 @@ nav img {
 }
 
 .hero-btn:hover {
-    border: 1px solid #f44336;
-    background: #f44336;
+    border: 1px solid #057771;
+    background: #057771;
     transition: 1s;
 }
 
@@ -103,7 +105,8 @@ nav .fa {
 
 @media(max-width: 700px) {
     .text-box h1 {
-        font-size: 20px;
+        font-size: 26px;
+        line-height: 35px;
     }
 
     .nav-links ul li {
@@ -112,7 +115,7 @@ nav .fa {
 
     .nav-links {
         position: fixed;
-        background: #f44336;
+        background: #03b4a8;
         height: 100vh;
         width: 200px;
         top: 0;
@@ -148,6 +151,7 @@ nav .fa {
 h1 {
     font-size: 36px;
     font-weight: 600;
+    line-height: 45px;
 }
 
 p {
@@ -168,7 +172,7 @@ p {
 
 .course-col {
     flex-basis: 31%;
-    background: #fff3f3;
+    background: #e0ebea;
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
@@ -225,7 +229,7 @@ h3 {
 }
 
 .layer:hover {
-    background: rgba(226,0,0,0.7);
+    background: #09686bd3;
 }
 
 .layer h3 {
@@ -295,7 +299,7 @@ h3 {
     border-radius: 10px;
     margin-bottom: 5%;
     text-align: left;
-    background: #fff3f3;
+    background: #e0ebea;
     padding: 25px;
     cursor: pointer;
     display: flex;
@@ -318,7 +322,7 @@ h3 {
 }
 
 .testimonials-col .fa {
-    color: #f44336;
+    color: #0c8077;
 }
 
 @media(max-width: 700px) {
@@ -335,7 +339,7 @@ h3 {
 .cta {
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(eduford_img/banner2.jpg);
+    background-image: linear-gradient(rgba(3, 37, 59, 0.781), rgba(0, 7, 6, 0.705)), url(eduford_img/scuba.jpg);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -370,7 +374,7 @@ h3 {
 }
 
 .icons .fa {
-    color: #f44336;
+    color: #0C8077;
     margin: 0 13px;
     cursor: pointer;
     padding: 18px 0;
@@ -381,7 +385,7 @@ h3 {
 .sub-header {
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(eduford_img/background.jpg);
+    background-image: linear-gradient(rgba(3, 37, 59, 0.781), rgba(0, 7, 6, 0.705)), url(eduford_img/d3.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
@@ -418,9 +422,9 @@ h3 {
 }
 
 .red-btn {
-    border: 1px solid #f44336;
+    border: 1px solid #0C8077;
     background: transparent;
-    color: #f44336;
+    color: #0C8077;
 }
 
 .red-btn:hover {
