--- a/style.css
+++ b/style.css
@@ -463,7 +463,7 @@ h3 {
 }
 
 .blog-right h3 {
-    background: #f44336;
+    background: #0c8077;
     color: white;
     padding: 7px 0;
     font-size: 16px;
@@ -540,7 +540,7 @@ h3 {
 
 .contact-col div .fa {
     font-size: 28px;
-    color: #f44336;
+    color: #0c8077;
     margin: 10px;
     margin-right: 30px;
 }
